// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Card Component Snapshot renders correctly 1`] = `
<Card
  helpLinkOnClick={[MockFunction]}
  helpLinkTooltip="tooltip"
>
  <div>
    Test
  </div>
</Card>
`;

exports[`Test Card Component Snapshot renders correctly with internal link 1`] = `
<Card
  internalLink={
    Object {
      "callback": [Function],
      "text": "more",
    }
  }
>
  <div>
    Test
  </div>
</Card>
`;
